<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="7dp" android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="7dp">

        <CheckBox
            android:id="@+id/default_server"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/github_repository_settings_default_checkbox" />

        <CheckBox
            android:id="@+id/custom_server"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/github_repository_settings_custom_checkbox" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:text="@string/github_repository_settings_username"
            android:layout_weight="30"
            android:gravity="center"/>

        <EditText
            android:id="@+id/github_username"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:inputType="text"
            android:layout_weight="70"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:text="@string/github_repository_settings_repository_name"
            android:layout_weight="30"
            android:gravity="center"/>

        <EditText
            android:id="@+id/repository_name"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:inputType="text"
            android:layout_weight="70"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:text="@string/github_repository_settings_branch_name"
            android:layout_weight="30"
            android:gravity="center"/>

        <EditText
            android:id="@+id/branch_name"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:inputType="text"
            android:layout_weight="70"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>