...
  <string name="menu_displaytrack">Display track</string>
  <string name="menu_stoptracking">Stop &amp; save</string>
  <string name="menu_newtrack">New track</string>
  <string name="menu_deletetracks">Delete all tracks</string>
  <string name="menu_continue">Continue track</string>
  <string name="menu_stopcurrenttrack">Stop current track</string>
  <string name="menu_save">Save</string>
  <string name="menu_cancel">Cancel</string>
  <string name="menu_export">Export as GPX</string>
  <string name="menu_osm_upload">OpenStreetMap upload</string>
  <string name="menu_center_to_gps">Center to GPS</string>
  <string name="menu_exportall">Export all as GPX</string>
  <!--Errors-->
...
  <!--Github Repository Settings-->
  <string name="github_repository_settings_default_checkbox">Default</string>
  <string name="github_repository_settings_custom_checkbox">Custom</string>
  <string name="github_repository_settings_username">Github username: </string>
  <string name="github_repository_settings_repository_name">Repository name: </string>
  <string name="github_repository_settings_branch_name">Branch name: </string>
  <string name="github_repository_settings_valid_server">Github Repository valid</string>
  <string name="github_repository_settings_invalid_server">Github Repository invalid</string>
  <!--Upload to GitHub-->
  <string name="successfully_created">successfully created</string>
  <string name="error_creating">Error creating</string>
  <string name="db_error">Database error</string>
  <string name="successfully_saved">successfully saved</string>
  <string name="saving_error">Saving error</string>
...
